# yumi_motion_planning

./: CMakeLists.txt  README.md  package.xml
files/: fixed_obstacles.txt
include/yumi_motion_planning/: moveit_util.h
launch/: plan_pushing_trajs.launch  plan_trajectories.launch  run.launch  run_pushes.launch
scripts/: grippers.py  main.py  motion_planning_tut.py  moveit_utils.py  yumi_moveit_utils.py
src/: .plan_trajectories.cpp.swp  add_obstacles.cpp  motion_planning.cpp  moveit_util.cpp  plan_pushing_trajs.cpp  plan_trajectories.cpp  run.cpp  run_pushes.cpp
