<?xml version="1.0"?>
<package format="2">
  <name>yumi_motion_planning</name>
  <version>0.1.0</version>
  <description>The yumi_motion_planning package</description>

  <maintainer email="algh@kth.se">algh</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_wrapper</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>kdl_wrapper</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>kdl_wrapper</exec_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>tinyxml</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
